# Here-i-come-Python

./: .gitignore  .nojekyll  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOOD_FIRST_ISSUES.md  ISSUES_TODO.md  README.md  ROADMAP.md  index.html  index.md  launcher.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
basic_programs/: README.md  __init__.py
docs/: 404.html  CODE_OF_CONDUCT.md  CONTRIBUTING_GUIDE.md  GOOD_FIRST_ISSUES.md  LEARNING_PATH.md  README.md  ROADMAP.md  common_sections.md  index.html  overview.md  sitemap.xml  strings.md
dsa/: LEARNING_GUIDE.md  README.md  __init__.py  arrays.md  hash_maps.md  recursion.md  stacks_queues.md
exercises/: README.md  __init__.py  exercise1.py  exercise10.py  exercise11.py  exercise12.py  exercise13.py  exercise14.py  exercise15.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  exercise9.py  main.py
games/: README.md  game10.html  game11.py  game12.py  game13.py  game14.py  game15.html  game4.py  game6.py  game7.py  game8.py  game9.py
level1/: README.md
level2/: README.md
notebooks/: contribution_guide.ipynb  debugging_testing.ipynb  dsa_interactive.ipynb  fun_coding_challenges.ipynb  performance_optimization.ipynb  project_walkthrough.ipynb  python_basics.ipynb
scripts/: create_issues.ps1  create_issues.sh  generate_readme.py  include_sections.py  issues_config.json  offline_test_runner.py
shared/: __init__.py  cli_utils.py  path_utils.py
speed_rush/: README.md
templates/: README.md  project_readme_template.md
(+82 files in other folders)
